cs21b038_lab8/y.output
   0  $accept : prog $end

   1  $$1 :

   2  prog : slist $$1 prog

   3  $$2 :

   4  prog : selectionstatement $$2 prog
   5       |

   6  selectionstatement : IF LPAREN booleanexpression RPAREN LBRACE prog RBRACE ELSE LBRACE prog RBRACE
   7                     | IF LPAREN booleanexpression RPAREN LBRACE prog RBRACE

   8  slist : assignmentexpression SEMICOLON

   9  assignmentexpression : variable ASSIGN additiveexpression
  10                       | variable INC
  11                       | variable DEC
  12                       | INC variable
  13                       | DEC variable

  14  variable : IDENTIFIER
  15           | LPAREN variable RPAREN

  16  booleanexpression : primaryexpression
  17                    | primaryexpression LT primaryexpression
  18                    | primaryexpression GT primaryexpression
  19                    | primaryexpression LEQ primaryexpression
  20                    | primaryexpression GEQ primaryexpression
  21                    | primaryexpression EQ primaryexpression
  22                    | primaryexpression NEQ primaryexpression
  23                    | primaryexpression AND primaryexpression
  24                    | primaryexpression OR primaryexpression
  25                    | NOT primaryexpression

  26  additiveexpression : multiplicativeexpression
  27                     | additiveexpression ADD multiplicativeexpression
  28                     | additiveexpression SUB multiplicativeexpression

  29  multiplicativeexpression : unaryexpression
  30                           | multiplicativeexpression MUL unaryexpression
  31                           | multiplicativeexpression DIV unaryexpression

  32  unaryexpression : postfixexpression
  33                  | INC unaryexpression
  34                  | DEC unaryexpression
  35                  | ADD unaryexpression
  36                  | SUB unaryexpression

  37  postfixexpression : primaryexpression
  38                    | postfixexpression INC
  39                    | postfixexpression DEC

  40  primaryexpression : constant
  41                    | IDENTIFIER
  42                    | LPAREN additiveexpression RPAREN

  43  constant : INTEGER

state 0
	$accept : . prog $end  (0)
	prog : .  (5)

	INC  shift 1
	DEC  shift 2
	LPAREN  shift 3
	IF  shift 4
	IDENTIFIER  shift 5
	$end  reduce 5

	prog  goto 6
	slist  goto 7
	assignmentexpression  goto 8
	variable  goto 9
	selectionstatement  goto 10


state 1
	assignmentexpression : INC . variable  (12)

	LPAREN  shift 3
	IDENTIFIER  shift 5
	.  error

	variable  goto 11


state 2
	assignmentexpression : DEC . variable  (13)

	LPAREN  shift 3
	IDENTIFIER  shift 5
	.  error

	variable  goto 12


state 3
	variable : LPAREN . variable RPAREN  (15)

	LPAREN  shift 3
	IDENTIFIER  shift 5
	.  error

	variable  goto 13


state 4
	selectionstatement : IF . LPAREN booleanexpression RPAREN LBRACE prog RBRACE ELSE LBRACE prog RBRACE  (6)
	selectionstatement : IF . LPAREN booleanexpression RPAREN LBRACE prog RBRACE  (7)

	LPAREN  shift 14
	.  error


state 5
	variable : IDENTIFIER .  (14)

	.  reduce 14


state 6
	$accept : prog . $end  (0)

	$end  accept


state 7
	prog : slist . $$1 prog  (2)
	$$1 : .  (1)

	.  reduce 1

	$$1  goto 15


state 8
	slist : assignmentexpression . SEMICOLON  (8)

	SEMICOLON  shift 16
	.  error


state 9
	assignmentexpression : variable . ASSIGN additiveexpression  (9)
	assignmentexpression : variable . INC  (10)
	assignmentexpression : variable . DEC  (11)

	INC  shift 17
	DEC  shift 18
	ASSIGN  shift 19
	.  error


state 10
	prog : selectionstatement . $$2 prog  (4)
	$$2 : .  (3)

	.  reduce 3

	$$2  goto 20


state 11
	assignmentexpression : INC variable .  (12)

	.  reduce 12


state 12
	assignmentexpression : DEC variable .  (13)

	.  reduce 13


state 13
	variable : LPAREN variable . RPAREN  (15)

	RPAREN  shift 21
	.  error


state 14
	selectionstatement : IF LPAREN . booleanexpression RPAREN LBRACE prog RBRACE ELSE LBRACE prog RBRACE  (6)
	selectionstatement : IF LPAREN . booleanexpression RPAREN LBRACE prog RBRACE  (7)

	LPAREN  shift 22
	NOT  shift 23
	INTEGER  shift 24
	IDENTIFIER  shift 25
	.  error

	primaryexpression  goto 26
	constant  goto 27
	booleanexpression  goto 28


state 15
	prog : slist $$1 . prog  (2)
	prog : .  (5)

	INC  shift 1
	DEC  shift 2
	LPAREN  shift 3
	IF  shift 4
	IDENTIFIER  shift 5
	$end  reduce 5
	RBRACE  reduce 5

	prog  goto 29
	slist  goto 7
	assignmentexpression  goto 8
	variable  goto 9
	selectionstatement  goto 10


state 16
	slist : assignmentexpression SEMICOLON .  (8)

	.  reduce 8


state 17
	assignmentexpression : variable INC .  (10)

	.  reduce 10


state 18
	assignmentexpression : variable DEC .  (11)

	.  reduce 11


state 19
	assignmentexpression : variable ASSIGN . additiveexpression  (9)

	ADD  shift 30
	SUB  shift 31
	INC  shift 32
	DEC  shift 33
	LPAREN  shift 22
	INTEGER  shift 24
	IDENTIFIER  shift 25
	.  error

	additiveexpression  goto 34
	multiplicativeexpression  goto 35
	unaryexpression  goto 36
	postfixexpression  goto 37
	primaryexpression  goto 38
	constant  goto 27


state 20
	prog : selectionstatement $$2 . prog  (4)
	prog : .  (5)

	INC  shift 1
	DEC  shift 2
	LPAREN  shift 3
	IF  shift 4
	IDENTIFIER  shift 5
	$end  reduce 5
	RBRACE  reduce 5

	prog  goto 39
	slist  goto 7
	assignmentexpression  goto 8
	variable  goto 9
	selectionstatement  goto 10


state 21
	variable : LPAREN variable RPAREN .  (15)

	.  reduce 15


state 22
	primaryexpression : LPAREN . additiveexpression RPAREN  (42)

	ADD  shift 30
	SUB  shift 31
	INC  shift 32
	DEC  shift 33
	LPAREN  shift 22
	INTEGER  shift 24
	IDENTIFIER  shift 25
	.  error

	additiveexpression  goto 40
	multiplicativeexpression  goto 35
	unaryexpression  goto 36
	postfixexpression  goto 37
	primaryexpression  goto 38
	constant  goto 27


state 23
	booleanexpression : NOT . primaryexpression  (25)

	LPAREN  shift 22
	INTEGER  shift 24
	IDENTIFIER  shift 25
	.  error

	primaryexpression  goto 41
	constant  goto 27


state 24
	constant : INTEGER .  (43)

	.  reduce 43


state 25
	primaryexpression : IDENTIFIER .  (41)

	.  reduce 41


state 26
	booleanexpression : primaryexpression .  (16)
	booleanexpression : primaryexpression . LT primaryexpression  (17)
	booleanexpression : primaryexpression . GT primaryexpression  (18)
	booleanexpression : primaryexpression . LEQ primaryexpression  (19)
	booleanexpression : primaryexpression . GEQ primaryexpression  (20)
	booleanexpression : primaryexpression . EQ primaryexpression  (21)
	booleanexpression : primaryexpression . NEQ primaryexpression  (22)
	booleanexpression : primaryexpression . AND primaryexpression  (23)
	booleanexpression : primaryexpression . OR primaryexpression  (24)

	LT  shift 42
	GT  shift 43
	LEQ  shift 44
	GEQ  shift 45
	EQ  shift 46
	NEQ  shift 47
	AND  shift 48
	OR  shift 49
	RPAREN  reduce 16


state 27
	primaryexpression : constant .  (40)

	.  reduce 40


state 28
	selectionstatement : IF LPAREN booleanexpression . RPAREN LBRACE prog RBRACE ELSE LBRACE prog RBRACE  (6)
	selectionstatement : IF LPAREN booleanexpression . RPAREN LBRACE prog RBRACE  (7)

	RPAREN  shift 50
	.  error


state 29
	prog : slist $$1 prog .  (2)

	.  reduce 2


state 30
	unaryexpression : ADD . unaryexpression  (35)

	ADD  shift 30
	SUB  shift 31
	INC  shift 32
	DEC  shift 33
	LPAREN  shift 22
	INTEGER  shift 24
	IDENTIFIER  shift 25
	.  error

	unaryexpression  goto 51
	postfixexpression  goto 37
	primaryexpression  goto 38
	constant  goto 27


state 31
	unaryexpression : SUB . unaryexpression  (36)

	ADD  shift 30
	SUB  shift 31
	INC  shift 32
	DEC  shift 33
	LPAREN  shift 22
	INTEGER  shift 24
	IDENTIFIER  shift 25
	.  error

	unaryexpression  goto 52
	postfixexpression  goto 37
	primaryexpression  goto 38
	constant  goto 27


state 32
	unaryexpression : INC . unaryexpression  (33)

	ADD  shift 30
	SUB  shift 31
	INC  shift 32
	DEC  shift 33
	LPAREN  shift 22
	INTEGER  shift 24
	IDENTIFIER  shift 25
	.  error

	unaryexpression  goto 53
	postfixexpression  goto 37
	primaryexpression  goto 38
	constant  goto 27


state 33
	unaryexpression : DEC . unaryexpression  (34)

	ADD  shift 30
	SUB  shift 31
	INC  shift 32
	DEC  shift 33
	LPAREN  shift 22
	INTEGER  shift 24
	IDENTIFIER  shift 25
	.  error

	unaryexpression  goto 54
	postfixexpression  goto 37
	primaryexpression  goto 38
	constant  goto 27


state 34
	assignmentexpression : variable ASSIGN additiveexpression .  (9)
	additiveexpression : additiveexpression . ADD multiplicativeexpression  (27)
	additiveexpression : additiveexpression . SUB multiplicativeexpression  (28)

	ADD  shift 55
	SUB  shift 56
	SEMICOLON  reduce 9


state 35
	additiveexpression : multiplicativeexpression .  (26)
	multiplicativeexpression : multiplicativeexpression . MUL unaryexpression  (30)
	multiplicativeexpression : multiplicativeexpression . DIV unaryexpression  (31)

	MUL  shift 57
	DIV  shift 58
	ADD  reduce 26
	SUB  reduce 26
	RPAREN  reduce 26
	SEMICOLON  reduce 26


state 36
	multiplicativeexpression : unaryexpression .  (29)

	.  reduce 29


state 37
	unaryexpression : postfixexpression .  (32)
	postfixexpression : postfixexpression . INC  (38)
	postfixexpression : postfixexpression . DEC  (39)

	INC  shift 59
	DEC  shift 60
	ADD  reduce 32
	SUB  reduce 32
	MUL  reduce 32
	DIV  reduce 32
	RPAREN  reduce 32
	SEMICOLON  reduce 32


state 38
	postfixexpression : primaryexpression .  (37)

	.  reduce 37


state 39
	prog : selectionstatement $$2 prog .  (4)

	.  reduce 4


state 40
	additiveexpression : additiveexpression . ADD multiplicativeexpression  (27)
	additiveexpression : additiveexpression . SUB multiplicativeexpression  (28)
	primaryexpression : LPAREN additiveexpression . RPAREN  (42)

	ADD  shift 55
	SUB  shift 56
	RPAREN  shift 61
	.  error


state 41
	booleanexpression : NOT primaryexpression .  (25)

	.  reduce 25


state 42
	booleanexpression : primaryexpression LT . primaryexpression  (17)

	LPAREN  shift 22
	INTEGER  shift 24
	IDENTIFIER  shift 25
	.  error

	primaryexpression  goto 62
	constant  goto 27


state 43
	booleanexpression : primaryexpression GT . primaryexpression  (18)

	LPAREN  shift 22
	INTEGER  shift 24
	IDENTIFIER  shift 25
	.  error

	primaryexpression  goto 63
	constant  goto 27


state 44
	booleanexpression : primaryexpression LEQ . primaryexpression  (19)

	LPAREN  shift 22
	INTEGER  shift 24
	IDENTIFIER  shift 25
	.  error

	primaryexpression  goto 64
	constant  goto 27


state 45
	booleanexpression : primaryexpression GEQ . primaryexpression  (20)

	LPAREN  shift 22
	INTEGER  shift 24
	IDENTIFIER  shift 25
	.  error

	primaryexpression  goto 65
	constant  goto 27


state 46
	booleanexpression : primaryexpression EQ . primaryexpression  (21)

	LPAREN  shift 22
	INTEGER  shift 24
	IDENTIFIER  shift 25
	.  error

	primaryexpression  goto 66
	constant  goto 27


state 47
	booleanexpression : primaryexpression NEQ . primaryexpression  (22)

	LPAREN  shift 22
	INTEGER  shift 24
	IDENTIFIER  shift 25
	.  error

	primaryexpression  goto 67
	constant  goto 27


state 48
	booleanexpression : primaryexpression AND . primaryexpression  (23)

	LPAREN  shift 22
	INTEGER  shift 24
	IDENTIFIER  shift 25
	.  error

	primaryexpression  goto 68
	constant  goto 27


state 49
	booleanexpression : primaryexpression OR . primaryexpression  (24)

	LPAREN  shift 22
	INTEGER  shift 24
	IDENTIFIER  shift 25
	.  error

	primaryexpression  goto 69
	constant  goto 27


state 50
	selectionstatement : IF LPAREN booleanexpression RPAREN . LBRACE prog RBRACE ELSE LBRACE prog RBRACE  (6)
	selectionstatement : IF LPAREN booleanexpression RPAREN . LBRACE prog RBRACE  (7)

	LBRACE  shift 70
	.  error


state 51
	unaryexpression : ADD unaryexpression .  (35)

	.  reduce 35


state 52
	unaryexpression : SUB unaryexpression .  (36)

	.  reduce 36


state 53
	unaryexpression : INC unaryexpression .  (33)

	.  reduce 33


state 54
	unaryexpression : DEC unaryexpression .  (34)

	.  reduce 34


state 55
	additiveexpression : additiveexpression ADD . multiplicativeexpression  (27)

	ADD  shift 30
	SUB  shift 31
	INC  shift 32
	DEC  shift 33
	LPAREN  shift 22
	INTEGER  shift 24
	IDENTIFIER  shift 25
	.  error

	multiplicativeexpression  goto 71
	unaryexpression  goto 36
	postfixexpression  goto 37
	primaryexpression  goto 38
	constant  goto 27


state 56
	additiveexpression : additiveexpression SUB . multiplicativeexpression  (28)

	ADD  shift 30
	SUB  shift 31
	INC  shift 32
	DEC  shift 33
	LPAREN  shift 22
	INTEGER  shift 24
	IDENTIFIER  shift 25
	.  error

	multiplicativeexpression  goto 72
	unaryexpression  goto 36
	postfixexpression  goto 37
	primaryexpression  goto 38
	constant  goto 27


state 57
	multiplicativeexpression : multiplicativeexpression MUL . unaryexpression  (30)

	ADD  shift 30
	SUB  shift 31
	INC  shift 32
	DEC  shift 33
	LPAREN  shift 22
	INTEGER  shift 24
	IDENTIFIER  shift 25
	.  error

	unaryexpression  goto 73
	postfixexpression  goto 37
	primaryexpression  goto 38
	constant  goto 27


state 58
	multiplicativeexpression : multiplicativeexpression DIV . unaryexpression  (31)

	ADD  shift 30
	SUB  shift 31
	INC  shift 32
	DEC  shift 33
	LPAREN  shift 22
	INTEGER  shift 24
	IDENTIFIER  shift 25
	.  error

	unaryexpression  goto 74
	postfixexpression  goto 37
	primaryexpression  goto 38
	constant  goto 27


state 59
	postfixexpression : postfixexpression INC .  (38)

	.  reduce 38


state 60
	postfixexpression : postfixexpression DEC .  (39)

	.  reduce 39


state 61
	primaryexpression : LPAREN additiveexpression RPAREN .  (42)

	.  reduce 42


state 62
	booleanexpression : primaryexpression LT primaryexpression .  (17)

	.  reduce 17


state 63
	booleanexpression : primaryexpression GT primaryexpression .  (18)

	.  reduce 18


state 64
	booleanexpression : primaryexpression LEQ primaryexpression .  (19)

	.  reduce 19


state 65
	booleanexpression : primaryexpression GEQ primaryexpression .  (20)

	.  reduce 20


state 66
	booleanexpression : primaryexpression EQ primaryexpression .  (21)

	.  reduce 21


state 67
	booleanexpression : primaryexpression NEQ primaryexpression .  (22)

	.  reduce 22


state 68
	booleanexpression : primaryexpression AND primaryexpression .  (23)

	.  reduce 23


state 69
	booleanexpression : primaryexpression OR primaryexpression .  (24)

	.  reduce 24


state 70
	selectionstatement : IF LPAREN booleanexpression RPAREN LBRACE . prog RBRACE ELSE LBRACE prog RBRACE  (6)
	selectionstatement : IF LPAREN booleanexpression RPAREN LBRACE . prog RBRACE  (7)
	prog : .  (5)

	INC  shift 1
	DEC  shift 2
	LPAREN  shift 3
	IF  shift 4
	IDENTIFIER  shift 5
	RBRACE  reduce 5

	prog  goto 75
	slist  goto 7
	assignmentexpression  goto 8
	variable  goto 9
	selectionstatement  goto 10


state 71
	additiveexpression : additiveexpression ADD multiplicativeexpression .  (27)
	multiplicativeexpression : multiplicativeexpression . MUL unaryexpression  (30)
	multiplicativeexpression : multiplicativeexpression . DIV unaryexpression  (31)

	MUL  shift 57
	DIV  shift 58
	ADD  reduce 27
	SUB  reduce 27
	RPAREN  reduce 27
	SEMICOLON  reduce 27


state 72
	additiveexpression : additiveexpression SUB multiplicativeexpression .  (28)
	multiplicativeexpression : multiplicativeexpression . MUL unaryexpression  (30)
	multiplicativeexpression : multiplicativeexpression . DIV unaryexpression  (31)

	MUL  shift 57
	DIV  shift 58
	ADD  reduce 28
	SUB  reduce 28
	RPAREN  reduce 28
	SEMICOLON  reduce 28


state 73
	multiplicativeexpression : multiplicativeexpression MUL unaryexpression .  (30)

	.  reduce 30


state 74
	multiplicativeexpression : multiplicativeexpression DIV unaryexpression .  (31)

	.  reduce 31


state 75
	selectionstatement : IF LPAREN booleanexpression RPAREN LBRACE prog . RBRACE ELSE LBRACE prog RBRACE  (6)
	selectionstatement : IF LPAREN booleanexpression RPAREN LBRACE prog . RBRACE  (7)

	RBRACE  shift 76
	.  error


state 76
	selectionstatement : IF LPAREN booleanexpression RPAREN LBRACE prog RBRACE . ELSE LBRACE prog RBRACE  (6)
	selectionstatement : IF LPAREN booleanexpression RPAREN LBRACE prog RBRACE .  (7)

	ELSE  shift 77
	$end  reduce 7
	INC  reduce 7
	DEC  reduce 7
	LPAREN  reduce 7
	RBRACE  reduce 7
	IF  reduce 7
	IDENTIFIER  reduce 7


state 77
	selectionstatement : IF LPAREN booleanexpression RPAREN LBRACE prog RBRACE ELSE . LBRACE prog RBRACE  (6)

	LBRACE  shift 78
	.  error


state 78
	selectionstatement : IF LPAREN booleanexpression RPAREN LBRACE prog RBRACE ELSE LBRACE . prog RBRACE  (6)
	prog : .  (5)

	INC  shift 1
	DEC  shift 2
	LPAREN  shift 3
	IF  shift 4
	IDENTIFIER  shift 5
	RBRACE  reduce 5

	prog  goto 79
	slist  goto 7
	assignmentexpression  goto 8
	variable  goto 9
	selectionstatement  goto 10


state 79
	selectionstatement : IF LPAREN booleanexpression RPAREN LBRACE prog RBRACE ELSE LBRACE prog . RBRACE  (6)

	RBRACE  shift 80
	.  error


state 80
	selectionstatement : IF LPAREN booleanexpression RPAREN LBRACE prog RBRACE ELSE LBRACE prog RBRACE .  (6)

	.  reduce 6


29 terminals, 15 nonterminals
44 grammar rules, 81 states

grammar parser grammar
symbol# value# symbol
     0      0  $end
     1    256  error
     2    257  ADD
     3    258  SUB
     4    259  MUL
     5    260  DIV
     6    261  INC
     7    262  DEC
     8    263  ASSIGN
     9    264  LPAREN
    10    265  RPAREN
    11    266  LBRACE
    12    267  RBRACE
    13    268  LBRACKET
    14    269  RBRACKET
    15    270  SEMICOLON
    16    271  IF
    17    272  ELSE
    18    273  LT
    19    274  GT
    20    275  LEQ
    21    276  GEQ
    22    277  EQ
    23    278  NEQ
    24    279  AND
    25    280  OR
    26    281  NOT
    27    282  INTEGER
    28    283  IDENTIFIER
    29    284  $accept
    30    285  prog
    31    286  slist
    32    287  assignmentexpression
    33    288  variable
    34    289  additiveexpression
    35    290  multiplicativeexpression
    36    291  unaryexpression
    37    292  postfixexpression
    38    293  primaryexpression
    39    294  constant
    40    295  booleanexpression
    41    296  $$1
    42    297  selectionstatement
    43    298  $$2
